Fix dropdown getting cut off at bottom

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3051,6 +3051,10 @@ input.tab:checked + .tab-content,
   height: 35%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .w-52 {
   width: 13rem;
 }
